fixed plancard on mobile

--- a/src/components/PlanCard/PlanCard.scss
+++ b/src/components/PlanCard/PlanCard.scss
@@ -114,7 +114,7 @@
       gap: 2.791vw;
 
       svg {
-        width: 4vw;
+        width: 5vw;
         height: 5.5vw;
       }
     }
@@ -128,6 +128,10 @@
       padding: 2.791vw;
       border-radius: 20vw;
       margin-bottom: 3.488vw;
+      .logo {
+        width: 5vw;
+        height: 5vw;
+      }
     }
     .action-button.--pricing {
       font-size: 5.581vw;
